--- a/sample_app/app/views/static_pages/help.html.erb
+++ b/sample_app/app/views/static_pages/help.html.erb
@@ -1,2 +1,14 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, "Help") %>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title><%= yield(:title) %> | Ruby on Rails Tutorial Sample App</title>
+    </head>
+    <body>
+            <h1>Need Help?</h1>
+            <p>
+                Get help for the Ruby on Rails tutorial at the
+                <a href="http://www.railstutorial.org/#help"> Rails tutorial help section</a>
+            </p>
+    </body>
+</html>
