--- a/sample_app/app/views/static_pages/home.html.erb
+++ b/sample_app/app/views/static_pages/home.html.erb
@@ -1,15 +1,15 @@
 <% provide(:title, "Home") %>
 <!DOCTYPE html>
 <html>
-    <head>
-        <title><%= yield(:title) %> | Ruby on Rails Tutorial Sample App</title>
-    </head>
-    <body>
-        <h1>Home</h1>
-
-        <p>
-            This is the home page for the Ch. 3 exercise
-            found in <a href="https://www.railstutorial.org/">railstutorial.org</a>.
-        </p>
-    </body>
+  <head>
+    <title><%= yield(:title) %> | Ruby on Rails Tutorial Sample App</title>
+  </head>
+  <body>
+    <h1>Sample App</h1>
+    <p>
+      This is the home page for the
+      <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
+      sample application.
+    </p>
+  </body>
 </html>
