--- a/sample_app/app/assets/stylesheets/custom.css.scss
+++ b/sample_app/app/assets/stylesheets/custom.css.scss
@@ -7,6 +7,29 @@
 
 $gray-medium-light: #eaeaea;
 
+/* Universal */
+
+body {
+    padding-top: 60px;
+}
+
+section {
+    overflow: auto;
+}
+
+textarea {
+    resize: vertical;
+}
+
+.center {
+    text-align: center;
+    h1 {
+        margin-bottom: 10px;
+    }
+}
+
+/* Typography */
+
 h1, h2, h3, h4, h5, h6 {
     line-height: 1;
 }
@@ -32,40 +55,21 @@ p {
     line-height: 1.7em;
 }
 
+/* Header */
+
 #logo {
     float: left;
     margin-right: 10px;
     font-size: 1.7em;
-    color: #fff;
+    color: white;
     text-transform: uppercase;
     letter-spacing:  -1px;
     padding-top: 9px;
     font-weight: bold;
-}
-
-#logo:hover {
-    color: #fff;
-    text-decoration: none;
-}
-
-body {
-    padding-top: 60px;
-}
-
-section {
-    overflow: auto;
-}
-
-textarea {
-    resize: vertical;
-}
-
-.center {
-    text-align: center;
-}
-
-.center h1 {
-    margin-bottom: 10px;
+    &:hover {
+        color: white;
+        text-decoration: none;
+    }
 }
 
 /* footer */
@@ -73,28 +77,23 @@ textarea {
 footer {
     margin-top: 45px;
     padding-top: 5px;
-    border-top: 1px solid #eaeaea;
+    border-top: 1px solid $gray-medium-light;
     color: $gray-light;
-}
-
-footer a {
-    color: #555;
-}
-
-footer a:hover {
-    color: #222;
-}
-
-footer small {
-    float: left;
-}
-
-footer ul {
-    float: right;
-    list-style: none;
-}
-
-footer ul li {
-    float: left;
-    margin-left: 15px;
+    a {
+        color: $gray;
+        &:hover {
+            color: $gray-darker;
+        }
+    }
+    small {
+        float: left;
+    }
+    ul {
+        float: right;
+        list-style: none;
+        li {
+            float: left;
+            margin-left: 15px;
+        }
+    }
 }
